--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <style>
     body {
-      background-color: #275A86;
+      background-color: white;
       background-image: url("background.png");
       background-repeat: repeat-x;
       background-position: left bottom;
