--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div>
     <ul>
         <li>SCB Lockdown Videos has moved to a new address - <a href="https://android-penguin.github.io/lockdown-videos" target="_blank">Click here</a></li>
-        <li>Makrall website (WIP) - <a href="test.html" target="_blank">Click here</a></li>
+        <li>Makrall website (WIP) - <a href="https://android-penguin.github.io/makrall" target="_blank">Click here</a></li>
     </ul>
   </div>
 </body>
