--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Shaun C-B">
+  <meta name="keywords" content="android penguin, shaun cb, shaun c-b shaun cole-baker, shaun cole baker, webcomic, makrall, tofuoreobellum">
+  <meta name="google-site-verification" content="c08WDVIBIPS1yYC8EsAaxKunqTNP9__scV38Ngks3sA" />
 
   <style>
     body {
