Experiment with SEO
Added search engine optimisation terms to see if site will show up in google search results.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
       outline-color: black;
       outline-width: 2px;
     }
-
     p {
       margin: 0;
       font-size: 30px;
       text-align: center;
+    }
+    #hidden {
+      visibility: hidden;
     }
     @font-face {
       font-family: 'Android-y';
@@ -94,6 +96,14 @@
       <p>Makrall Website</p>
     </div>
     <div>
+      <p id="hidden">
+        shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
+        shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
+        shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
+        shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
+        shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
+        shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
+      </p>
     </div>
   <!-- </div>
     <ul>
