Changed search term visibility
Made search terms invisible using RGBA instead of visibility hidden.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
       font-size: 30px;
       text-align: center;
     }
-    #hidden {
-      visibility: hidden;
+    #search-terms {
+      font-size: 0.00001%;
+      color: rgba(0, 0, 0, 0);
     }
     @font-face {
       font-family: 'Android-y';
@@ -96,7 +97,7 @@
       <p>Makrall Website</p>
     </div>
     <div>
-      <p id="hidden">
+      <p id="search-terms">
         shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
         shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
         shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
