--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         <img src="makrall_thumbnail.png" alt="Makrall Website"></a>
       <p>Makrall Website</p>
     </div>
+    <div class="img-container">
+      <img src="Colourpack/pack.png">
+      <p>https://android-penguin.github.io/Colourpack</p>
     <div>
       <p id="search-terms">
         shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
