--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
   <style>
     body {
-      background-color: white;
-      background-image: url("background.png");
-      background-repeat: repeat-x;
-      background-position: left bottom;
+      background-color: #498EB7;
+      background-image: url("background2.png");
+      background-repeat: no-repeat;
+      background-position: right bottom;
       font-family: "Arial Black";
       min-height: 100vh;
+      height: auto;
     }
     #header {
       height: auto;
@@ -59,6 +60,9 @@
       font-size: 30px;
       text-align: center;
     }
+    #colourlink {
+      font-size: 10px;
+    }
     #search-terms {
       font-size: 0.00001%;
       color: rgba(0, 0, 0, 0);
@@ -96,9 +100,10 @@
         <img src="makrall_thumbnail.png" alt="Makrall Website"></a>
       <p>Makrall Website</p>
     </div>
-    <div class="img-container">
+    <!--<div class="img-container">
       <img src="Colourpack/pack.png">
-      <p>https://android-penguin.github.io/Colourpack</p>
+      <p id="colourlink">https://android-penguin.github.io/Colourpack</p>
+    </div>-->
     <div>
       <p id="search-terms">
         shaun cb shaun cole-baker shaun cole baker android pengiun android-penguin
